--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,13 @@
 @import url(./reset.css);
+@import url(./header.css);
+@import url(./main.css);
+@import url(./footer.css);
+
+
+body {
+    color: #333;
+    background-color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    
+}
